# Techno_Machine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  claude.md  techno_music_structure_theory_chinese.md
.github/workflows/: build.yml
Research/: dj_mixing_techniques.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Arrangement/: SongManager.hpp  StyleMorpher.hpp  TransitionEngine.hpp
Source/Core/: AudioEngine.cpp  AudioEngine.h  CVOutputRouter.cpp  CVOutputRouter.h  Clock.cpp  Clock.h  Transport.cpp  Transport.h
Source/Sequencer/: MarkovChain.hpp  StyleProfiles.hpp  TechnoPattern.h
Source/Synthesis/: MinimalDrumSynth.h  SampleEngine.h
Source/UI/: AudioSettingsWindow.cpp  AudioSettingsWindow.h
docs/: INSTALL_EN.md  INSTALL_JP.md  INSTALL_ZH.md
